# zairachem-docker

./: .gitignore  CLAUDE.md  README.md  descriptor-agreement-container.patch  install.sh  pyproject.toml  run.sh  run_fit.sh  run_predict.sh  run_tdc.sh
00_base/: README.md  pyproject.toml
00_base/zairabase/: __init__.py  vars.py
00_base/zairabase/utils/: pipeline.py
00_zaira_base/: pyproject.toml
00_zaira_base/zairabase/: __init__.py  vars.py
01_setup/: README.md  dev.py  pyproject.toml
01_setup/zairasetup/: run_fit.py  run_predict.py
01_setup/zairasetup/setup/: check.py  clean.py  files.py  folding.py  merge.py  prediction.py  schema.py  standardize.py  tasks.py  training.py
01_setup/zairasetup/tools/chembl_structure/: standardizer.py
01_train_setup/: README.md  dev.py  pyproject.toml
01_train_setup/osm_bin_2/: raw_input.csv  session.json
01_train_setup/osm_bin_2/data/: assays.csv  compounds.csv  compounds_std.csv  compounds_std_folds.csv  data0.csv  data1.csv  input_schema.json  mapping.csv  parameters.json  values.csv
01_train_setup/zairasetup/: run.py
01_train_setup/zairasetup/setup/: __init__.py  check.py  clean.py  files.py  folding.py  merge.py  schema.py  standardize.py  tasks.py  training.py  unify.py  utils.py
01_train_setup/zairasetup/tools/melloddy/: aggregate.py  descriptors.py  folding.py  pipeline.py  standardize.py  thresholding.py
01_train_setup/zairasetup/tools/melloddy/config/: example_parameters.json
02_describe/: README.md  data.csv  dev.py  development.py  pyproject.toml
02_describe/descriptors/eos4avb/: raw.h5  raw_summary.csv
02_describe/zairadescribe/: describe.py  manifolds.py  raw.py  run.py  treated.py
02_describe/zairadescribe/descriptors/: __init__.py  baseline.py  describe.py  manifolds.py  raw.py  reference.py  treated.py
03_estimate/zairaestimate/: pipe.py
03_estimate/zairaestimate/automl/: classic.py  fingerprint.py
03_estimate/zairaestimate/from_classic/: estimate.py
03_treat/: README.md  pyproject.toml
03_treat/zairatreat/: run.py
03_treat/zairatreat/imputers/: impute.py  treated.py
04_estimate/: README.md  dev.py  pyproject.toml
04_estimate/zairaestimate/: base.py  run.py
04_estimate/zairaestimate/automl/: flaml.py
04_estimate/zairaestimate/estimators/: base.py  evaluate.py  pipe.py
04_estimate/zairaestimate/estimators/flaml_automl/: __init__.py  estimate.py  flaml.py  performance.py  pipe.py
04_estimate/zairaestimate/estimators/kerastuner/: __init__.py  assemble.py  estimate.py  kerastuner.py  performance.py  pipe.py
04_estimate/zairaestimate/from_fingerprint/: estimate.py
04_estimate/zairaestimate/from_individual_full_descriptors/: estimate.py  performance.py
04_estimate/zairaestimate/utils/: autogluon.py
05_pool/: README.md  development.py  pyproject.toml
05_pool/zairapool/: base.py  pipe.py  run.py
05_pool/zairapool/bagger/: assemble.py  bagger.py  pipe.py  pool.py
06_report/: README.md  pyproject.toml
06_report/zairareport/: __init__.py  fetcher.py  plots.py  report.py  run.py  table.py  utils.py
07_finish/: README.md  pyproject.toml
07_finish/zairafinish/: finish.py  run.py
08_distill/: README.md  pyproject.toml
08_distill/zairadistill/: distill.py  run.py
example/: data_test.csv  data_train.csv  smiles_test.csv
zairachem/: cli.py
zairachem/base/: __init__.py  generate_config.py  vars.py
zairachem/base/utils/: concurrency.py  console.py  descriptors.py  isaura_report.py  live.py  logging.py  matrices.py  model_version.py  pipeline.py  pipeline_tracker.py  preflight.py  progress.py  results.py  rich_help.py  summaries.py  terminal.py  utils.py
zairachem/describe/: development.py  run.py
zairachem/describe/descriptors/: __init__.py  api.py  describe.py  raw.py  utils.py
zairachem/describe/files/: install_compose.sh
zairachem/describe/files/configs/: docker-compose.yml  nginx.conf
zairachem/estimate/: dev.py  run.py
zairachem/estimate/estimators/: base.py  evaluate.py  pipe.py
zairachem/estimate/estimators/flaml_automl/: assemble.py  estimate.py  flaml.py  performance.py  pipe.py
zairachem/estimate/estimators/lazy_qsar/: __init__.py  assemble.py  estimate.py  monitor.py  pipe.py  utils.py
zairachem/estimate/tools/ghost/: ghost.py
zairachem/estimate/tools/ghost/ghostml/: __init__.py  test_ghost.py
zairachem/finish/: finish.py  run.py
zairachem/holdout/: __init__.py  engine.py  indices.py  io.py  monitor.py  pipe.py  splits.py  workspace.py
zairachem/interpret/: interpret.py
zairachem/interpretability/: interpretability.py
zairachem/pool/: base.py  development.py  pipe.py  run.py
zairachem/pool/bagger/: assemble.py  bagger.py  pipe.py  pool.py
zairachem/pool/reliability_pooler/: assemble.py  pipe.py  pool.py  pooler.py
zairachem/report/: __init__.py  colors.py  fetcher.py  html.py  perf.py  plots.py  report.py  run.py  table.py  utils.py
zairachem/report/ghost/ghostml/: __init__.py  ghost.py  test_ghost.py
zairachem/screen/: __init__.py  pipe.py  proxy.py
zairachem/setup/: dev.py  run_fit.py  run_predict.py
zairachem/setup/prep/: __init__.py  base.py  check.py  clean.py  files.py  folding.py  merge.py  prediction.py  schema.py  standardize.py  tasks.py  training.py  utils.py
zairachem/setup/tools/chembl_structure/: exclude_flag.py  standardizer.py
zairachem/treat/: run.py
zairachem/treat/fpsim2/: searcher.py
zairachem/treat/imputers/: __init__.py  impute.py  manifolds.py  reference_transformer.py  treated.py
