[tool.poetry]
name = "zairachem"
version = "0.1.1"
description = "ZairaChem is the first library of Ersilia's family of tools devoted to providing out-of-the-box machine learning solutions for biomedical problems"

authors = ["Abel Legese abel@ersilia.io"]

[tool.poetry.dependencies]
python        = ">=3.10"
pandas        = "2.3.0"
loguru        = "*"
h5py          = "3.14.0"
joblib        = "1.5.1"
numpy         = "2.1.3"
rdkit         = "2024.3.6"
standardiser  = "0.1.9"
scikit-learn  = "1.6.1"
fpsim2        = "0.5.2"
lolP          = "0.0.4"
umap-learn    = "0.5.7"
lazyqsar      = { git = "https://github.com/ersilia-os/lazy-qsar.git" }
stylia = { git = "https://github.com/ersilia-os/stylia.git" }
openpyxl      = "3.1.5"
rich-click    = "1.8.9"

[tool.poetry.scripts]
zairachem = "zairachem.cli:cli"

[build-system]
requires    = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
