[tool.poetry]
name = "zairachem"
version = "1.0.0"
description = "ZairaChem is an automated ML tool for building QSAR models"
authors = ["Ersilia Open Source Initiative <hello@ersilia.io>", "Gemma Turon <gemma@ersilia.io>", "Abel Legese <abel@ersilia.io>", "Miquel Duran-Frigola <miquel@ersilia.io>"]

[tool.poetry.dependencies]
python        = ">=3.10"
pandas        = "2.3.0"
loguru        = "*"
h5py          = "3.14.0"
joblib        = "1.5.1"
numpy         = "2.1.3"
rdkit         = "2024.3.6"
standardiser  = "0.1.9"
scikit-learn  = "1.6.1"
fpsim2        = "0.5.2"
lolP          = "0.0.4"
umap-learn    = "0.5.7"
lazyqsar      = "2.1.5"
stylia        = "0.0.2"
openpyxl      = "3.1.5"
rich-click    = "1.8.9"
torch         = "2.8.0"
isaura = { git="https://github.com/ersilia-os/isaura.git" } 
xai4chem = { git="https://github.com/ersilia-os/xai4chem.git" }

[tool.poetry.extras]
isaura = ["isaura"]

[tool.poetry.scripts]
zairachem = "zairachem.cli:cli"

[build-system]
requires    = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
