[tool.poetry]
name = "zairachem"
version = "1.0.0"
description = "ZairaChem is an automated ML tool for building QSAR models"
authors = ["Ersilia Open Source Initiative <hello@ersilia.io>", "Gemma Turon <gemma@ersilia.io>", "Abel Legese <abel@ersilia.io>", "Miquel Duran-Frigola <miquel@ersilia.io>"]

[tool.poetry.dependencies]
python        = ">=3.10,<4.0"
pandas        = "2.3.0"
loguru        = "0.7.3"
h5py          = "3.14.0"
joblib        = "1.5.1"
numpy         = "2.1.3"
rdkit         = "2024.3.6"
scikit-learn  = "1.6.1"
lazyqsar      = { version = "3.4.2", extras = ["fit"] }
stylia        = "1.0.1"
matplotlib    = "3.10.0"
seaborn       = "0.13.2"
pyyaml        = "6.0.3"
rich          = "14.1.0"
rich-click    = "1.8.9"
click         = "8.4.2"
psutil        = "7.0.0"
requests      = "2.34.2"
eosframes     = "1.1.0"
# Security floors for transitive deps (pulled via matplotlib / requests). Pinned to the first patched
# release so the resolved lockfile can't regress to a version with a known advisory.
pillow        = ">=12.2.0"
urllib3       = ">=2.7.0"
idna          = ">=3.15"
isaura = { version = "2.3.0", optional = true }

[tool.poetry.extras]
isaura = ["isaura"]

[tool.poetry.scripts]
zairachem = "zairachem.cli:main"

[build-system]
requires    = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
