[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "zairasetup"
version = "2.0.0"
authors = ["Ersilia Open Source Initiative <hello@ersilia.io>"]
description = "Automated QSAR modeling for chemistry"
license = "GPLv3"
requires-python = ">=3.8"
keywords = [
    "qsar",
    "machine-learning",
    "chemistry",
    "computer-aided-drug-design"
]
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[tool.poetry.dependencies]
python = ">=3.8"
zairabase = { path = "../00_zaira_base" }
pandas = "2.1.4"
numpy = "1.26.4"
rdkit = "2023.9.5"
standardiser = "*"
requests = "*"
joblib = "*"
scikit-learn = "*"
pandera="0.21.0"
jsonschema="4.23.0"
melloddy-tuner={git = "https://github.com/melloddy/MELLODDY-TUNER.git", rev = "3.0.3a0"}
dask[dataframe]="2024.11.2"
tqdm=4.67.0